primera modificación de prueva

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="contenedor">
       <header class="header">
         <div class="menu">
-          <div class="logotipo"></div>
+          <div class="logotipo">MARCA</div>
           <div class="nav"></div>
           <div class="social"></div>
         </div>
